objects/Historique_de_poste__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Historique de postes</relationshipLabel>
        <relationshipName>Historique_de_postes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dbut__c</fullName>
        <label>Début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fin__c</fullName>
        <label>Fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Societe__c</fullName>
        <label>Société</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historique de postes</relationshipLabel>
        <relationshipName>Historique_de_postes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Socit__c</fullName>
        <label>Société</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Historique de poste</label>
    <nameField>
        <label>Nom de Historique de poste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historique de postes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>